--- a/main.html
+++ b/main.html
@@ -5,18 +5,19 @@
   <title>CodeMirror: Preserve Code Folding </title>
   <meta charset="utf-8"/>
   <!-- All these resources can be fetch form cdn or local as well -->
-  <link rel="stylesheet" href="https://codemirror.net/lib/codemirror.css">
-  <link rel="stylesheet" href="https://codemirror.net/addon/fold/foldgutter.css" />
-  <link rel="stylesheet" href="https://codemirror.net/theme/midnight.css">
-  <script src="https://codemirror.net/lib/codemirror.js"></script>
-  <script src="https://codemirror.net/addon/fold/foldcode.js"></script>
-  <script src="https://codemirror.net/addon/fold/foldgutter.js"></script>
-  <script src="https://codemirror.net/addon/fold/brace-fold.js"></script>
-  <script src="https://codemirror.net/addon/fold/indent-fold.js"></script>
-  <script src="https://codemirror.net/addon/fold/markdown-fold.js"></script>
-  <script src="https://codemirror.net/addon/fold/comment-fold.js"></script>
-  <script src="https://codemirror.net/mode/javascript/javascript.js"></script>
-  <script src="https://codemirror.net/mode/markdown/markdown.js"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/codemirror.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/addon/fold/foldgutter.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2//theme/midnight.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/codemirror.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/addon/fold/foldcode.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/addon/fold/foldgutter.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/addon/fold/brace-fold.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/addon/fold/indent-fold.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/addon/fold/markdown-fold.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/addon/fold/comment-fold.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/mode/javascript/javascript.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.50.2/mode/markdown/markdown.js"></script>
   <style>
     .CodeMirror {border-top: 1px solid black; border-bottom: 1px solid black;}
   </style>
